[package]
name = "scaffolding-lna-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.8"
log = "0.4.29"
plotters = "0.3.7"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
ureq = "3.1.4"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
ureq = "3.1.4"
